<resources>
    <string name="app_name">WiiChat</string>
    <string name="emoji_keyboard">Emoji keyboard</string>
    <string name="attachment">Attachment</string>
    <string name="send_message">Send message</string>
    <string name="write_a_message">Write a message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image">Profile image</string>
    <string name="more_info">More info</string>
    <string name="name_placeholder">Name Placeholder</string>

    <string name="time_ago_now">few moments ago</string>
    <string name="time_ago_full_seconds">%1$d seconds ago</string>
    <string name="time_ago_full_minute">%1$d minute ago</string>
    <string name="time_ago_full_minutes">%1$d minutes ago</string>
    <string name="time_ago_full_hour">%1$d hour ago</string>
    <string name="time_ago_full_hours">%1$d hours ago</string>
    <string name="time_ago_full_days">%1$d days ago</string>
    <string name="time_ago_full_month">%1$d month ago</string>
    <string name="time_ago_full_months">%1$d months ago</string>

    <string name="time_ago_seconds">%1$d sec ago</string>
    <string name="time_ago_minute">%1$d min ago</string>
    <string name="time_ago_minutes">%1$d min ago</string>
    <string name="time_ago_hour">%1$d h ago</string>
    <string name="time_ago_hours">%1$d h ago</string>
    <string name="time_ago_yesterday_at">Yesterday at %1$s</string>
    <string name="time_ago_days">%1$d d ago</string>
    <string name="time_ago_month">%1$d m ago</string>
    <string name="time_ago_months">%1$d m ago</string>
    <string name="action">Action</string>
    <string name="action_text">Action text</string>
    <string name="discover_peers">Discover peers</string>
    <string name="you_don_t_have_any_recent_chats">You don\'t have any recent chats!</string>
</resources>
