<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="15dp"
    android:paddingTop="5dp"
    android:paddingRight="15dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/profile_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chatTextHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_placeholder"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/chatMoreInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_info"
            android:textColor="@android:color/black" />


    </LinearLayout>

</LinearLayout>